logs/dag_id=dag/run_id=manual__2022-12-07T06:46:44.933145+00:00/task_id=create_table/attempt=1.log
[2022-12-07T06:46:50.281+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag.create_table manual__2022-12-07T06:46:44.933145+00:00 [queued]>
[2022-12-07T06:46:50.317+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag.create_table manual__2022-12-07T06:46:44.933145+00:00 [queued]>
[2022-12-07T06:46:50.327+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-12-07T06:46:50.331+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2022-12-07T06:46:50.332+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-12-07T06:46:50.380+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_table> on 2022-12-07 06:46:44.933145+00:00
[2022-12-07T06:46:50.387+0000] {standard_task_runner.py:55} INFO - Started process 26362 to run task
[2022-12-07T06:46:50.394+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag', 'create_table', 'manual__2022-12-07T06:46:44.933145+00:00', '--job-id', '1353', '--raw', '--subdir', 'DAGS_FOLDER/dag.py', '--cfg-path', '/tmp/tmpasd5u77z']
[2022-12-07T06:46:50.395+0000] {standard_task_runner.py:83} INFO - Job 1353: Subtask create_table
[2022-12-07T06:46:50.572+0000] {task_command.py:376} INFO - Running <TaskInstance: dag.create_table manual__2022-12-07T06:46:44.933145+00:00 [running]> on host 505aa50095aa
[2022-12-07T06:46:50.806+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=lofitravel
AIRFLOW_CTX_DAG_ID=dag
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-12-07T06:46:44.933145+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-12-07T06:46:44.933145+00:00
[2022-12-07T06:46:50.849+0000] {base.py:71} INFO - Using connection ID 'postgres_localhost' for task execution.
[2022-12-07T06:46:50.893+0000] {sql.py:315} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS pairs(
            ticker_from VARCHAR(3) NOT NULL;
        , parameters: None
[2022-12-07T06:46:50.900+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 3:             ticker_from VARCHAR(3) NOT NULL;
                                                   ^

[2022-12-07T06:46:50.959+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=dag, task_id=create_table, execution_date=20221207T064644, start_date=20221207T064650, end_date=20221207T064650
[2022-12-07T06:46:51.019+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 1353 for task create_table (syntax error at or near ";"
LINE 3:             ticker_from VARCHAR(3) NOT NULL;
                                                   ^
; 26362)
[2022-12-07T06:46:51.050+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-12-07T06:46:51.116+0000] {taskinstance.py:2623} INFO - 0 downstream tasks scheduled from follow-on schedule check
